// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My Connected React-Redux Component should render with given state from Redux store 1`] = `
<div
  className="pop-up-wrapper"
>
  
  <div
    className="add-movie-form"
  >
    <div
      className="add-movie-form__close"
    />
    <span
      className="add-movie-form__close"
      onClick={[Function]}
      role="button"
    >
      ✖
    </span>
    <h2
      className="add-movie-form__title"
    >
      Add Movie
    </h2>
    <form
      action="#"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="title"
        >
          Title
        </label>
        <input
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Title"
          type="text"
          value=""
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="release_date"
        >
          Release Date
        </label>
        <input
          name="release_date"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="2000-01-01"
          type="text"
          value=""
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="poster_path"
        >
          POster path
        </label>
        <input
          name="poster_path"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="overview"
        >
          Overview
        </label>
        <input
          name="overview"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="genre"
        >
          GenreL
        </label>
        <div
          className="add-movie-form__selector"
          id="genre"
          onClick={[Function]}
        >
          Select Genre
        </div>
        <div
          aria-labelledby="checkbox-group"
          className="add-movie-form__selector-list hidden"
          role="group"
        >
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="crime"
            />
            Crime
          </label>
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="documentary"
            />
            Documentary
          </label>
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="horror"
            />
            Horror
          </label>
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="comedy"
            />
            Comedy
          </label>
        </div>
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="runtime"
        >
          Runtime
        </label>
        <input
          name="runtime"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="add-movie-form__buttons"
      >
        <button
          className="button secondary"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
        <button
          className="button asd"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`when MovieForm then snapshot created for add movie 1`] = `
<div
  className="pop-up-wrapper"
>
  
  <div
    className="add-movie-form"
  >
    <div
      className="add-movie-form__close"
    />
    <span
      className="add-movie-form__close"
      onClick={[Function]}
      role="button"
    >
      ✖
    </span>
    <h2
      className="add-movie-form__title"
    >
      Add Movie
    </h2>
    <form
      action="#"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="title"
        >
          Title
        </label>
        <input
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Title"
          type="text"
          value=""
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="release_date"
        >
          Release Date
        </label>
        <input
          name="release_date"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="2000-01-01"
          type="text"
          value=""
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="poster_path"
        >
          POster path
        </label>
        <input
          name="poster_path"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="overview"
        >
          Overview
        </label>
        <input
          name="overview"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="genre"
        >
          GenreL
        </label>
        <div
          className="add-movie-form__selector"
          id="genre"
          onClick={[Function]}
        >
          Select Genre
        </div>
        <div
          aria-labelledby="checkbox-group"
          className="add-movie-form__selector-list hidden"
          role="group"
        >
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="crime"
            />
            Crime
          </label>
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="documentary"
            />
            Documentary
          </label>
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="horror"
            />
            Horror
          </label>
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="comedy"
            />
            Comedy
          </label>
        </div>
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="runtime"
        >
          Runtime
        </label>
        <input
          name="runtime"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="add-movie-form__buttons"
      >
        <button
          className="button secondary"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
        <button
          className="button asd"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`when MovieForm then snapshot created for edit movie 1`] = `
<div
  className="pop-up-wrapper"
>
  
  <div
    className="add-movie-form"
  >
    <div
      className="add-movie-form__close"
    />
    <span
      className="add-movie-form__close"
      onClick={[Function]}
      role="button"
    >
      ✖
    </span>
    <h2
      className="add-movie-form__title"
    >
      Add Movie
    </h2>
    <form
      action="#"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="title"
        >
          Title
        </label>
        <input
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Title"
          type="text"
          value="Fifty Shades Freed"
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="release_date"
        >
          Release Date
        </label>
        <input
          name="release_date"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="2000-01-01"
          type="text"
          value="2018-02-07"
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="poster_path"
        >
          POster path
        </label>
        <input
          name="poster_path"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="https://image.tmdb.org/t/p/w500/3kcEGnYBHDeqmdYf8ZRbKdfmlUy.jpg"
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="overview"
        >
          Overview
        </label>
        <input
          name="overview"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="Believing they have left behind shadowy figures from their past, newlyweds Christian and Ana fully embrace an inextricable connection and shared life of luxury. But just as she steps into her role as Mrs. Grey and he relaxes into an unfamiliar stability, new threats could jeopardize their happy ending before it even begins."
        />
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="genre"
        >
          GenreL
        </label>
        <div
          className="add-movie-form__selector"
          id="genre"
          onClick={[Function]}
        >
          Select Genre
        </div>
        <div
          aria-labelledby="checkbox-group"
          className="add-movie-form__selector-list hidden"
          role="group"
        >
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="crime"
            />
            Crime
          </label>
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="documentary"
            />
            Documentary
          </label>
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="horror"
            />
            Horror
          </label>
          <label>
            <input
              checked={false}
              name="genres"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
              value="comedy"
            />
            Comedy
          </label>
        </div>
      </div>
      <div
        className="add-movie-form__fields"
      >
        <label
          htmlFor="runtime"
        >
          Runtime
        </label>
        <input
          name="runtime"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value={106}
        />
      </div>
      <div
        className="add-movie-form__buttons"
      >
        <button
          className="button secondary"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
        <button
          className="button asd"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
